--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-psycopg2-binary==2.9.10
 # FastAPI and Server
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
@@ -18,3 +17,5 @@ python-multipart==0.0.9
 
 # Configuration
 python-dotenv==1.0.1
+pydantic[email]
+pydantic_settings
